--- a/src/components/dashboard/Main/main.module.scss
+++ b/src/components/dashboard/Main/main.module.scss
@@ -1,5 +1,17 @@
 .main_body {
     height: calc(100vh - 70.76px);
     overflow-y: auto;
-    padding: 20px;
+    padding: 20px 40px 20px 20px;
+
+    
+    @media (max-width:768px) {
+        height: calc(100vh - 133px);
+        padding: 20px;
+    }
+    @media (max-width:480px) {
+        padding: 20px 15px;
+    }
+    @media (max-width:360px) {
+        padding: 20px 10px;
+    }
 }
