--- a/src/components/dashboard/dashboard.module.scss
+++ b/src/components/dashboard/dashboard.module.scss
@@ -1,3 +1,7 @@
 .dashboard_wrapper{
-    margin: 0 20px 0 16px;
+    margin: 0 0 0 16px;
+    z-index: 1;
+    @media (max-width: 768px) {
+        margin: 0;
+    }
 }
