--- a/src/common/modal/modal.module.scss
+++ b/src/common/modal/modal.module.scss
@@ -14,67 +14,33 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    transition:
-        opacity 0.3s,
-        transform 0.3s;
-
-    // &.slide-top {
-    //     animation: 1.5s slide-top;
-    //   }
-
-    //   @keyframes slide-top {
-    //     from {
-    //       margin-top: -100%;
-    //     }
-
-    //     to {
-    //       margin-bottom: auto;
-    //     }
-    //   }
+    -webkit-transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+    transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
 
     &.show {
         opacity: 1;
-        .popup_content {
-            // transform: translate(-50%, -50%);
-        }
-        &.slide-top {
-            animation: 1.5s slide-top;
-        }
-
-        @keyframes slide-top {
-            from {
-                margin-top: -100%;
-            }
-
-            to {
-                margin-bottom: auto;
-            }
-        }
     }
 
     .popup_content {
         background-color: $white;
         border-radius: 8px;
-        transform: translateY(100%);
         width: 50%;
-        transition: transform 0.3s;
-        top: 50%;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        height: auto;
+        position: fixed;
+        -webkit-transition: all 1s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+        transition: all 1s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+        transform: translateY(100%);
         overflow: hidden;
-
-        .isOpenPopup{
-
+        
+        &.isOpenPopup {
+            transform: translateY(-10%);;
+            @media (max-width: 600px) {
+                transform: translateY(0);
+            }
         }
-
+        
         @media (max-width: 600px) {
             width: 100%;
-            position: relative;
-            left: 0;
-            bottom: 0;
-            top: auto;
-            transform: translateY(0);
         }
 
         .modal_header {
@@ -94,7 +60,7 @@
             .close_button {
                 background: transparent;
                 border: none;
-                
+
                 @media (max-width: 480px) {
                     padding: 10px;
                     border-radius: 8rem;
