--- a/src/common/form/form.module.scss
+++ b/src/common/form/form.module.scss
@@ -23,6 +23,7 @@
         border-radius: 8px;
         border: 1px solid $gray-light;
         background: $white;
+        width: 100%;
 
         &::-webkit-input-placeholder {
             /* WebKit, Blink, Edge */
