--- a/src/common/modal/modal.module.scss
+++ b/src/common/modal/modal.module.scss
@@ -2,24 +2,32 @@
 @import "../../globalStyles/typo";
 
 .popup_overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999999;
-    background: rgba(0, 0, 0, 0.4);
-    -webkit-backdrop-filter: blur(4px);
+    width: 100vw;
+    height: 100vh;
     backdrop-filter: blur(4px);
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    -webkit-transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
-    transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+    position: fixed;
+    overflow-y: auto;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.38);
+    z-index: 999999;
+    box-sizing: border-box;
+    animation: fade-in 0.5s 1 linear;
+    animation-fill-mode: forwards;
     opacity: 0;
 
-    &.show {
-        opacity: 1;
+    @keyframes fade-in {
+        0% {
+            animation-timing-function: cubic-bezier(0.2242, 0.7499, 0.3142, 0.8148);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
     }
 
     .popup_content {
@@ -27,21 +35,46 @@
         border-radius: 8px;
         width: 50%;
         height: auto;
-        position: fixed;
-        -webkit-transition: all 1s cubic-bezier(0.64, 0.19, 0.4, 0.81);
-        transition: all 1s cubic-bezier(0.64, 0.19, 0.4, 0.81);
-        transform: translateY(100%);
+        -webkit-transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+        transition: all 0.3s cubic-bezier(0.64, 0.19, 0.4, 0.81);
+        animation: 0.5s slide-bottom;
+        position: relative;
+        z-index: 2;
+        margin-right: auto;
+        margin-left: auto;
         overflow: hidden;
-        
-        &.isOpenPopup {
-            transform: translateY(-10%);;
-            @media (max-width: 600px) {
-                transform: translateY(0);
+        margin-top: 5%;
+
+        @keyframes slide-bottom {
+            from {
+                margin-top: 100%;
+            }
+            to {
+                margin-top: 5%;
             }
         }
-        
+
         @media (max-width: 600px) {
             width: 100%;
+            bottom: 0;
+            top: auto;
+            left: 0;
+            right: 0;
+            margin: unset;
+            position: absolute;
+            -webkit-transition: all 0.4s ease-in;
+            transition: all 0.4s ease-in;
+            animation: 0.4s slide-bottom;
+            border-radius: 8px 8px 0 0;
+
+            @keyframes slide-bottom {
+                from {
+                    transform: translateY(100%);
+                }
+                to {
+                    transform: translateY(0);
+                }
+            }
         }
 
         .modal_header {
@@ -49,9 +82,9 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            border: 1px solid $gray-light;
-            
-            @media (max-width:480px) {
+            border-bottom: 1px solid $gray-light;
+
+            @media (max-width: 480px) {
                 padding: 20px;
             }
 
@@ -62,7 +95,7 @@
                 font-size: 20px;
                 font-weight: 600;
 
-                @media (max-width:480px) {
+                @media (max-width: 480px) {
                     font-size: 18px;
                 }
             }
@@ -75,7 +108,7 @@
                     border-radius: 8rem;
                     background-color: $danger-light;
                 }
-                @media (max-width:360px) {
+                @media (max-width: 360px) {
                     padding: 7px;
                 }
                 .icon_close {
@@ -94,6 +127,7 @@
         }
         .modal_footer {
             padding: 20px 30px;
+            border-top: 1px solid $gray-light;
 
             .save_button {
                 padding: 10px 30px;
