--- a/src/components/dashboard/Main/main.module.scss
+++ b/src/components/dashboard/Main/main.module.scss
@@ -3,15 +3,20 @@
     overflow-y: auto;
     padding: 20px 40px 20px 20px;
 
-    
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
         height: calc(100vh - 133px);
         padding: 20px;
     }
-    @media (max-width:480px) {
+    @media (max-width: 480px) {
         padding: 20px 15px;
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
-    @media (max-width:360px) {
+    @media (max-width: 360px) {
         padding: 20px 10px;
     }
 }
