--- a/src/components/assessment/overview.module.scss
+++ b/src/components/assessment/overview.module.scss
@@ -53,11 +53,12 @@
             display: flex;
             flex-direction: column;
             gap: 16px;
+            flex-grow: 1;
 
             &:not(:last-child) {
                 border-right: 1px solid $gray-light;
             }
-            @media (max-width: 1199px) {
+            @media (max-width: 1240px) {
                 &:not(:last-child) {
                     border-right: 0;
                     border-left: 1px solid $gray-light;
